--- a/Casil/app/build.gradle
+++ b/Casil/app/build.gradle
@@ -2,16 +2,29 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+repositories {
+    mavenCentral()
+    maven {
+        url "https://maven.google.com"
+    }
+}
+
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "br.com.aguiar.casil"
+        manifestPlaceholders = [onesignal_app_id: "f970e492-e21e-4d93-bc40-075610c6fc59",
+                                onesignal_google_project_number: "REMOTE"]
+
         minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+
     }
     buildTypes {
         release {
@@ -26,13 +39,18 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 
     compile 'org.jetbrains.anko:anko-common:0.9'
+
+    compile 'com.android.support:multidex:1.0.1'
+
+    compile 'com.onesignal:OneSignal:[3.6.0, 3.99.99]'
+
 }
-repositories {
-    mavenCentral()
-}
+
