--- a/Casil/app/src/main/AndroidManifest.xml
+++ b/Casil/app/src/main/AndroidManifest.xml
@@ -4,8 +4,11 @@
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
+        android:name=".helper.ApplicationHelper"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -21,7 +24,8 @@
         </activity>
 
         <service android:name=".service.Ear"/>
+        <meta-data android:name="com.onesignal.NotificationOpened.DEFAULT" android:value="DISABLE" />
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
